Decrease LCARS font size to prevent header wrapping

--- a/webclient/src/light.css
+++ b/webclient/src/light.css
@@ -184,7 +184,7 @@ body {
 	height: 100vh;
 	background-color: black;
 	color: white;
-	font-size: 1.8em;
+	font-size: 1.75em;
 }
 
 .display-usage {
